# vulkan-tutorial-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml
CH1-Draw_a_triangle/: CMakeLists.txt  hello_triangle.cpp
CH1-Draw_a_triangle/0_Setup/: 0_base_code.cpp  1_instance.cpp  2_Validation_layers.cpp  3_physical_device_selection.cpp  4_logical_device.cpp  CMakeLists.txt
CH1-Draw_a_triangle/1_Presentation/: 1_window_surface.cpp  2_swapchain.cpp  3_image_views.cpp  CMakeLists.txt
CH1-Draw_a_triangle/2_Graphics_pipline_basics/: 1_shader_modules.cpp  2_fixed_functions.cpp  3_render_passes.cpp  4_graphics_pipeline_complete.cpp  CMakeLists.txt
CH1-Draw_a_triangle/3_Drawing/: 1_framebuffers.cpp  2_command_buffers.cpp  3_rendering_and_presentation.cpp  CMakeLists.txt
CH1-Draw_a_triangle/4_swap_chain_recreation/: CMakeLists.txt
CH2-Vertex_buffer/: 1_vertex_input_description.cpp  2_vertex_buffer_creation.cpp  3_staging_buffer.cpp  4_index_buffer.cpp  CMakeLists.txt
CH3-Uinform_buffer/: 1_descriptor_layout_and_buffer.cpp  2_descriptor_pool_and_sets.cpp  CMakeLists.txt  frag.glsl  vert.glsl
CH4-Texture_mapping/: 1_texture_image.cpp  2_image_view_and_sampler.cpp  3_combined_image_sampler.cpp  CMakeLists.txt  frag.glsl  frag.spv  vert.glsl  vert.spv
CH5-Depth_buffer/: CMakeLists.txt  depth_buffering.cpp  vert.glsl
CH6-Loading_model/: CMakeLists.txt  frag.glsl  loading_model.cpp  vert.spv  vertex_deduplication.cpp
QtVulkanTest/: main.cpp  vulkanTest.pro  vulkantest.qrc  vulkanwindow.cpp  vulkanwindow.h  vulkanwindowrenderer.cpp  vulkanwindowrenderer.h
_data/mydoc/: mydoc_sidebar.yml  mydoc_sidebar.yml.bak
_includes/: head.html  topnav.html
mydoc/: 0_1_Introduction.md  0_2_Overview.md  0_3_Development_environment.md  1_0_code_style.md  1_1_1_base_code.md  1_1_2_Instance.md  1_1_3_validation_layers.md  1_1_4_physical_devices.md  1_1_5_logical_device.md  1_2_1_window_surface.md  1_2_2_swap_chain.md  1_2_3_image_views.md  1_3_1_Graphics_pipeline.md  1_3_2_shader_modules.md  1_3_3_fixed_functions.md  1_3_4_render_passes.md  1_3_5_conclusion.md  1_4_1_framebuffers.md  1_4_2_command_buffers.md  1_4_3_rendering_and_presentation.md  1_5_swap_chain_recreation.md  1_code_style.md  2_1_vertex_input_description.md  2_2_vertex_buffer_cretion.md  2_3_staging_buffer.md  2_4_index_buffer.md  3_1_descriptor_layout_and_buffer.md  3_2_descriptor_pool_and_sets.md  4_1_images.md  4_2_image_view_and_samplers.md  4_3_combined_image_sampler.md  5_depth_buffering.md  5_loading_models.md  home.md  mydoc.md  mydoc_0_template.md  mydoc_15.1.md  mydoc_15.7.md  mydoc_15.9.md  mydoc_2.2_html5_overviews.md  (+10 more)
